recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: ':' expected but ')' found.
def branche(length) = { 
                  ^Tree:18: error: identifier expected but '}' found.
}
^